# splitscan

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt  split_pdf.py  splitscan.py
src/splitscan/: splitscan_cli.py
